fix footer css whitespace on large screens

--- a/source/stylesheets/footer.scss
+++ b/source/stylesheets/footer.scss
@@ -40,7 +40,6 @@ $large-screen: em(860) !default;
   background: $footer-background;
   padding: $base-spacing;
   width: 100%;
-  display: inline-block;
 
   .footer-logo {
     margin-right: 1em;
